--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Sobre nosotros</h6>
                     <h1 class="display-4 mb-3"><span class="text-primary">Experiencia</span> en servicios integrales</h1>
                     <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et ver. </p>
-                    <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#exampleModalLong">Read More</a>
+                    <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#exampleModalLong">Leer mas</a>
                 </div>
             </div>
         </div>
