--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Fontaneria</h3>
                             <p>Realizamos la instalación y mantenimiento de las redes de tuberías de agua potable y aguas residuales en edificios y otras construcciones. 
-                                Así como la como de otros sistemas relacionados con el agua.</p>
+                                Así como la de otros sistemas relacionados con el agua.</p>
                         </div>
                     </div>
                 </div>
