--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid mb-4 mb-lg-0" src="img/logo-removebg-preview.png" alt="">
+                    <img class="img-fluid mb-4 mb-lg-0" src="img/logo-preview.png" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Sobre nosotros</h6>
